# novolis-audio

./: .gitignore  AGENTS.md  Directory.Build.props  Directory.Packages.props  Novolis.Audio.slnx  README.md
codegen/: Directory.Build.props
codegen/Novolis.Audio.CodeGen/: AudioBindingCodegenHost.cs  AudioCodegenPipeline.cs  CodegenHeaders.cs  Novolis.Audio.CodeGen.csproj  Program.cs  RepoPaths.cs
codegen/Novolis.Audio.CodeGen.Abstractions/: AudioCodegenContext.cs  AudioPipelineLayout.cs  Novolis.Audio.CodeGen.Abstractions.csproj  PipelinePaths.cs
codegen/Novolis.Audio.Manifests/: AudioBindingManifestSource.cs  AudioManifestInputPaths.cs  Novolis.Audio.Manifests.csproj  NovolisAudioFacadesManifest.cs  NovolisAudioInteropManifest.cs  NovolisAudioSpeechModelsManifest.cs  NovolisAudioVoiceModelsManifest.cs  README.md  SpeechManifestInputPaths.cs  SpeechModelEngineKind.cs  SpeechModelManifestEntry.cs  VoiceManifestInputPaths.cs  VoiceModelManifestEntry.cs
codegen/Novolis.Audio.Pipeline/: GlobalUsings.cs  NativeShimCatalog.cs  Novolis.Audio.Pipeline.csproj  PipelineProfiles.cs  Program.cs  (+2 more)
codegen/native/novolis-audio-platform/: CMakeLists.txt  novolis_audio.c
docs/: design.md  getting-started.md  release.md  speech-models.md  voice-models.md
models/: README.md
scripts/: extract-bundled-voice-models.ps1  fetch-piper-model.ps1  fetch-speech-model.ps1  fetch-voice-model.ps1  pack-all-speech-model-archives.ps1  pack-all-voice-model-archives.ps1  pack-speech-model-archive.ps1  pack-voice-model-archive.ps1
src/: Directory.Build.props
tests/: Directory.Build.props
(+196 files in other folders)
